debug: try using "env" object in upload artifacts
Change-type: patch
Signed-off-by: Ryan Cooke <ryan@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -381,9 +381,9 @@ jobs:
           retention-days: 3
           # compression-level: 1
           path: |
-            ${DEPLOY_PATH}/*.*
-            ${DEPLOY_PATH}/VERSION*
-            ${DEPLOY_PATH}/image/balena{,-flasher}.img
+            ${{ env.DEPLOY_PATH }}/*.*
+            ${{ env.DEPLOY_PATH }}/VERSION*
+            ${{ env.DEPLOY_PATH }}/image/balena{,-flasher}.img
 
       ##############################
       # S3 Deploy
